--- a/InMemoryApp.Web/Views/Product/Show.cshtml
+++ b/InMemoryApp.Web/Views/Product/Show.cshtml
@@ -2,7 +2,9 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Product product = ViewBag.product as Product;
 }
 
 <h1>@ViewBag.zaman</h1>
 <h1>@ViewBag.callback</h1>
+<h1>Id: @product.Id / Name: @product.Name / Price: @product.Price</h1>
