--- a/IDistributedCachRedisApp.Web/Views/Product/Show.cshtml
+++ b/IDistributedCachRedisApp.Web/Views/Product/Show.cshtml
@@ -2,6 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Product p = ViewBag.product as Product;
 }
 
 <h1>Name</h1>
@@ -9,3 +10,8 @@
 
 <h1>ID</h1>
 <h1>@ViewBag.id</h1>
+
+<h1>Product Info</h1>
+<h1>@p.Id</h1>
+<h1>@p.Name</h1>
+<h1>@p.Price</h1>
